# PixTools

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  cloud_sprint_plan.md  docker-compose.yaml  go_api_parity_patchlist.md  implementation_plan.md  predeploy_blockers.md  professional_scaling_plan.md  professional_scaling_sprint_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  system_workflow.md  task.md  walkthrough.md
.github/workflows/: cd-dev.yaml  cd-prod.yaml  ci.yaml
alembic/: env.py
alembic/versions/: aec75fc63a2f_initial_migration.py  b7d9f2c4e1aa_add_exif_metadata_column.py
app/: config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  observability.py  schemas.py
app/ml/: dncnn.py
app/routers/: health.py  jobs.py
app/services/: dag_builder.py  idempotency.py  s3.py  webhook.py
app/static/: app.js  index.html  style.css
bench/: README.md  collect-grafana-metrics.ps1  collect-prod-run-logs.ps1  run-k6.ps1  run-production-performance-suite.ps1  run-small-stress.ps1  run-sprint5-validation.ps1
docs/: scaling_guardrails.md
go-api/: Dockerfile  go.mod  go.sum
infra/: .gitkeep  README.md  backend.hcl.example  compute.tf  dev.tfvars.example  ecr.tf  iam.tf  iam_github.tf  locals.tf  networking.tf  observability.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  ssm.tf  variables.tf  versions.tf
k8s/: .gitkeep  README.md  namespace.yaml  priorityclasses.yaml
models/: .gitkeep
tests/: conftest.py  test_api.py  test_idempotency.py  test_services.py  test_tasks.py
(+73 files in other folders)
